# gepa

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
docs/plans/: 2026-04-27-estimation-agent-design.md  2026-04-27-faza1-fundament.md  2026-04-28-faza2-samouczenie.md  2026-04-28-faza3-specjalizacja.md
gepa/: api.py  api_auth.py  app.py
gepa/config/: settings.py
gepa/data/: generate_curated.py  generate_synthetic.py  migrate_ace_poc.py
gepa/data/training/: curated_0060688f.json  curated_07f4a167.json  curated_085ea1f1.json  curated_08848f9e.json  curated_0c8c3a6f.json  curated_0e8d2d9b.json  curated_0fa15e13.json  curated_100b17f9.json  curated_132f33f5.json  curated_16deca96.json  curated_1732c42c.json  curated_1985f231.json  curated_1c4b9514.json  (+118 more)
gepa/dspy_modules/: classifier.py  estimator.py  metrics.py  signatures.py
gepa/graph/: state.py  workflow.py
gepa/memory/: graphiti_client.py  schemas.py
gepa/monitoring/: langfuse_config.py  mlflow_tracker.py
gepa/optimization/: optimizer.py  trainset.py
scripts/: seed_memory.py  train.py
tests/: test_api.py  test_api_auth.py  test_e2e_smoke.py  test_faza2_smoke.py  test_faza3_smoke.py  test_generate_synthetic.py  test_hot_swap.py  test_migration.py  test_settings.py
tests/dspy_modules/: test_classifier.py  test_estimator.py  test_metrics.py
tests/graph/: test_auto_trigger.py  test_routing.py  test_workflow.py
tests/memory/: test_graphiti_client.py
tests/monitoring/: test_langfuse_config.py  test_mlflow_tracker.py
tests/optimization/: test_optimizer.py  test_trainset.py
