[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gepa"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "dspy-ai>=2.6",
    "langgraph>=0.2",
    "langchain-core>=0.3",
    "graphiti-core>=0.3",
    "litellm>=1.40",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "streamlit>=1.35",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "mlflow>=2.14",
    "langfuse>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.14",
    "ruff>=0.4",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
